--- a/django_course_site/reviews/templates/reviews/review.html
+++ b/django_course_site/reviews/templates/reviews/review.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
+    <form method="POST">
+        {% csrf_token %}
         <label for="name">Name:</label>
         <input type="text" id="name" name="name"><br><br>
         <button>Send</button>
